# Raveloop

./: .gitignore  Cargo.toml  LICENSE  README.md  create-plan.md  package-lock.json  package.json  run-claude.sh  run-pi.sh  run-plan.sh
.github/workflows/: release.yml
LLM_STATE/core/: backlog.md  backlog.yaml  latest-session.md  latest-session.yaml  memory.md  memory.yaml  phase.md  reflect-baseline  related-plans.md  session-log.md  session-log.yaml  triage-baseline  work-baseline
LLM_STATE/survey-restructure/: backlog.md  memory.md  work-baseline
agents/claude-code/: tokens.yaml
agents/pi/: tokens.yaml
defaults/: create-plan.md  discover-stage2.md  survey-incremental.md  survey.md
defaults/agents/pi/: config.yaml
defaults/fixed-memory/: coding-style-bash.md  coding-style-elixir.md  coding-style-python.md  coding-style-rust.md  coding-style-swift.md  coding-style-typescript.md  memory-style.md
defaults/phases/: analyse-work.md  dream.md  reflect.md  triage.md  work.md
docs/: architecture.md  component-ontology.md  structured-backlog-r1-plan.md  structured-plan-state-design.md  survey-pivot-design.md
docs/analysis/: llm-work-audit.md
docs/reference/: cli-lifecycle.adoc  cli-state.adoc  cli-survey.adoc  concepts.adoc  index.adoc
docs/superpowers/plans/: 2026-04-17-raveloop-rust-rewrite.md
docs/superpowers/specs/: 2026-04-16-agent-merge-design.md
docs/tutorial/: 00-overview.adoc  01-install-and-config.adoc  02-the-project.adoc  03-creating-a-plan.adoc  04-the-first-cycle.adoc  05-further-cycles.adoc
fixed-memory/: memory-style.md
phases/: analyse-work.md  compact.md  dream.md  reflect.md  triage.md  work.md
prompts/: memory-prompt.md  system-prompt.md
raveloop-cli/: Cargo.toml
raveloop-cli/defaults/: config.yaml  raveloop.sh
raveloop-cli/defaults/agents/claude-code/: config.yaml
raveloop-cli/defaults/fixed-memory/: coding-style-rust.md  coding-style.md
raveloop-cli/defaults/phases/: analyse-work.md  dream.md  reflect.md  triage.md  work.md
raveloop-cli/defaults/skills/: brainstorming.md  tdd.md
raveloop-cli/src/: config.rs  dream.rs  format.rs  git.rs  init.rs  lib.rs  main.rs  phase_loop.rs  prompt.rs  subagent.rs  types.rs  ui.rs
raveloop-cli/src/agent/: claude_code.rs  mod.rs  pi.rs
raveloop-cli/tests/: integration.rs
scripts/: release-build.sh  release-doctor.sh  render-docs.sh
scripts/capture/: ravel-lite-tutorial.sh
scripts/capture/responses/: 03-backlog.txt  03-memory-seed.txt  03-project.txt  03-purpose.txt  04-task-choice.txt
skills/: writing-plans.md
src/: backlog_transitions.rs  config.rs  create.rs  debug_log.rs  dream.rs  format.rs  format.ts  git.rs  git.ts  index.ts  init.rs  lib.rs  main.rs  multi_plan.rs  phase-loop.ts  phase_loop.rs  phase_summary.rs  pivot.rs  projects.rs  prompt.rs  related_components.rs  state.rs  subagent.rs  survey.rs  types.rs  ui.rs
src/agent/: claude_code.rs  common.rs  pi.rs
src/agents/claude-code/: index.ts  stream-parser.ts
src/agents/pi/: index.ts  setup.ts  stream-parser.ts
src/discover/: apply.rs  mod.rs  schema.rs  stage2.rs  tree_sha.rs
src/ontology/: defaults.rs  mod.rs  schema.rs  yaml_io.rs
src/state/: filenames.rs  migrate.rs  mod.rs  phase.rs
src/state/backlog/: mod.rs  parse_md.rs  repair_stale_statuses.rs  schema.rs  verbs.rs  yaml_io.rs
src/state/discover_proposals/: mod.rs  verbs.rs
src/state/memory/: yaml_io.rs
src/state/session_log/: mod.rs  parse_md.rs  schema.rs  verbs.rs  yaml_io.rs
src/survey/: compose.rs  delta.rs  discover.rs  invoke.rs  render.rs  schema.rs
test/: test-compose-prompt.sh  test-format-pi-stream.sh  test-parse-propagation.sh
test/fixtures/: pi-stream-empty.jsonl  pi-stream-sample.jsonl  propagation-sample.yaml
tests/: cli.rs  config.rs  discover.rs  dream.rs  integration.rs  phase_loop.rs  pi_agent.rs  state_backlog.rs  state_projects.rs  state_related_components.rs  state_session_log.rs  survey.rs
tests/common/: mod.rs
website/: meta.yml
website/docs/: cli-lifecycle.html  cli-state.html  cli-survey.html  concepts.html  index.html
website/tutorials/: 00-overview.html  01-install-and-config.html  02-the-project.html  03-creating-a-plan.html  04-the-first-cycle.html  05-further-cycles.html
(+1 files in other folders)
