[package]
name = "ravel-lite"
version = "1.0.1"
edition = "2021"
description = "An orchestration loop for LLM development cycles"
repository = "https://github.com/Linkuistics/Ravel-Lite"
homepage = "https://github.com/Linkuistics/Ravel-Lite"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
dirs = "5"
sha2 = "0.10"
pathdiff = "0.2"
path-clean = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"

# The release-build profile that `dist` uses when producing tarballs.
# `lto = "thin"` is the cargo-dist default; it keeps single-binary
# release builds compact without paying for full-fat LTO.
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# A GitHub repo to push Homebrew formulas to
tap = "Linkuistics/homebrew-taps"
# Customize the Homebrew formula name
formula = "ravel-lite"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to publish prereleases to package managers
publish-prereleases = false
