[package]
name = "ravel-lite"
version = "1.0.2"
edition = "2021"
description = "An orchestration loop for LLM development cycles"
repository = "https://github.com/Linkuistics/Ravel-Lite"
homepage = "https://github.com/Linkuistics/Ravel-Lite"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
dirs = "5"
sha2 = "0.10"
pathdiff = "0.2"
path-clean = "1"

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"
