[package]
name = "ravel-lite"
version = "1.0.4"
edition = "2021"
description = "An orchestration loop for LLM development cycles"
repository = "https://github.com/Linkuistics/Ravel-Lite"
homepage = "https://github.com/Linkuistics/Ravel-Lite"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
dirs = "5"
sha2 = "0.10"
pathdiff = "0.2"
path-clean = "1"
# Vendored Lua 5.4 keeps the build self-contained — no system Lua
# required on dev or release machines, so cross-compiles via
# cargo-zigbuild keep working unchanged. `serialize` enables
# `mlua::Value <-> serde::Value` conversion for the YAML-anchored
# config surface (Lua mutates a serde tree, Rust deserialises it
# back into the existing AgentConfig / SharedConfig structs).
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
# Used by the interactive-PTY debug-capture path in src/agent/pty_capture.rs.
# Allocates a pseudo-terminal so claude still renders its TUI on a real
# tty while ravel-lite tees every byte to the debug log. Already a
# transitive dep, called out as direct here because src/ uses it.
portable-pty = "0.9"
# `libc::poll` lets the stdin pump wake on a shutdown flag without
# leaking a blocked thread per work-phase invocation. Used only on the
# Unix PTY path in src/agent/pty_capture.rs.
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"
